--- a/PROP-SEGONAENTREGA/src/views/assignaturaDisplay.fxml
+++ b/PROP-SEGONAENTREGA/src/views/assignaturaDisplay.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
@@ -17,7 +18,7 @@
                     <children>
                         <HBox alignment="CENTER_LEFT">
                             <children>
-                                <Label id="nom_assig" fx:id="label_name">
+                                <Label id="nom_assig" fx:id="label_name" minWidth="-Infinity">
                                     <padding>
                                         <Insets right="10.0" />
                                     </padding>
@@ -32,7 +33,7 @@
                         </HBox>
                         <HBox alignment="CENTER_LEFT">
                             <children>
-                                <Label fx:id="label_abr">
+                                <Label fx:id="label_abr" minWidth="-Infinity">
                                     <VBox.margin>
                                         <Insets />
                                     </VBox.margin>
@@ -273,4 +274,11 @@
     <padding>
         <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
     </padding>
+   <top>
+      <HBox alignment="CENTER_RIGHT" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" onAction="#handleModifica" text="Modifica" />
+         </children>
+      </HBox>
+   </top>
 </BorderPane>
