--- a/PROP-SEGONAENTREGA/src/views/assignaturaDisplay.fxml
+++ b/PROP-SEGONAENTREGA/src/views/assignaturaDisplay.fxml
@@ -48,7 +48,7 @@
                         </HBox>
                     </children>
                     <VBox.margin>
-                        <Insets bottom="20.0" />
+                        <Insets bottom="20.0" top="20.0" />
                     </VBox.margin>
                 </HBox>
                 <HBox id="plaest" alignment="CENTER_LEFT">
