--- a/PROP-SEGONAENTREGA/src/views/plaEstudisDisplay.fxml
+++ b/PROP-SEGONAENTREGA/src/views/plaEstudisDisplay.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -88,4 +89,11 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
+   <bottom>
+      <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" onAction="#handleModifica" text="Modifica" />
+         </children>
+      </HBox>
+   </bottom>
 </BorderPane>
