--- a/PROP-SEGONAENTREGA/src/views/restriccioDisplay.fxml
+++ b/PROP-SEGONAENTREGA/src/views/restriccioDisplay.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -9,6 +10,9 @@
       <ListView fx:id="llistaRestriccions" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </center>
    <bottom>
-      <Button fx:id="restriccions_elimina" mnemonicParsing="false" onAction="#handleElimina" text="Elimina" BorderPane.alignment="CENTER" />
+      <Button id="elim_restr" fx:id="restriccions_elimina" mnemonicParsing="false" onAction="#handleElimina" text="Elimina" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="10.0" top="10.0" />
+         </BorderPane.margin></Button>
    </bottom>
 </BorderPane>
