--- a/PROP-SEGONAENTREGA/src/views/swapForm.fxml
+++ b/PROP-SEGONAENTREGA/src/views/swapForm.fxml
@@ -26,7 +26,7 @@
             </Label>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                <children>
-                  <Button fx:id="selecciona_1" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleSelecciona1" text="Selecciona" />
+                  <Button id="grey" fx:id="selecciona_1" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleSelecciona1" text="Selecciona" />
                   <GridPane alignment="CENTER">
                     <columnConstraints>
                       <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="50.0" />
@@ -59,7 +59,7 @@
             </Label>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
                <children>
-                  <Button fx:id="selecciona_2" mnemonicParsing="false" onAction="#handleSelecciona2" text="Selecciona" />
+                  <Button id="grey" fx:id="selecciona_2" mnemonicParsing="false" onAction="#handleSelecciona2" text="Selecciona" />
                   <GridPane alignment="CENTER">
                      <columnConstraints>
                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="50.0" />
@@ -100,8 +100,8 @@
    <bottom>
       <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="button_reset" mnemonicParsing="false" onAction="#handleReset" text="Reset" />
-            <Button fx:id="button_accepta" mnemonicParsing="false" onAction="#handleAccepta" text="Accepta" />
+            <Button id="reset" fx:id="button_reset" mnemonicParsing="false" onAction="#handleReset" text="Reset" />
+            <Button id="accept_slot" fx:id="button_accepta" mnemonicParsing="false" onAction="#handleAccepta" text="Accepta" />
          </children>
          <BorderPane.margin>
             <Insets top="10.0" />
