--- a/PROP-SEGONAENTREGA/src/views/plaEstudisDisplay.fxml
+++ b/PROP-SEGONAENTREGA/src/views/plaEstudisDisplay.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane stylesheets="@../resources/mainview.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.CtrlPlaEstudisView">
+<BorderPane stylesheets="/mainview.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.CtrlPlaEstudisView">
     <center>
         <HBox BorderPane.alignment="CENTER">
             <children>
